Sat Sep 24 14:24:55 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* spec/README: update URL.

Sat Sep 24 11:28:22 2016  Koichi ITO  <koic.ito@gmail.com>

	* fix typos, "a" before "Integer" to "an".  [Fix GH-1438]

Sat Sep 24 10:19:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/misc/test_ruby_mode.rb (assert_indent): since write-region
	  in Emacs 25.1 no longer displays the "Wrote file" message, shows
	  the explicit message to check if successfully finished.
	  [ruby-core:77355] [Bug #12785]

	* test/misc/test_ruby_mode.rb (EXPR_SAVE): use a numeric prefix
	  argument of 0, not to make the previous version into a backup
	  file, instead of backup-inhibited.

	* test/misc/test_ruby_mode.rb (run_emacs): always save the buffer
	  if modified.

Fri Sep 23 23:57:40 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (make_method_entry_refined): fix wrong use of ||.

Fri Sep 23 21:38:58 2016  Akinori MUSHA  <knu@iDaemons.org>

	* tool/mdoc2man.rb (Mdoc2Man#parse_macro): Add support for the
	  `Lk` macro.

	* tool/mdoc2man.rb (Mdoc2Man#shift_arg): A new function to extract
	  a possibly quoted argument.

Fri Sep 23 20:36:05 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refine): refine modules as well.
	  [ruby-core:76199] [Feature #12534]

Fri Sep 23 20:19:09 2016  Akinori MUSHA  <knu@iDaemons.org>

	* man/ruby.1: Update the paragraphs in "Rich Libraries" which
	  included a dead link.

Fri Sep 23 20:05:27 2016  Akinori MUSHA  <knu@iDaemons.org>

	* man/ruby.1, man/erb.1, man/irb.1, man/ri.1: Use the `Lk` macro
	  for hyperlinks, which has been available since mdocml 1.5.1
	  (released more than seven years ago).

Fri Sep 23 15:47:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/forwardable.rb (_delegator_method): allow private methods to
	  be delegated, with warnings.  [ruby-core:77341] [Bug #12782]

Fri Sep 23 12:15:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): enable tail call